fix test dev